{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 153,
  "lineage": "93a976cd-f88d-ce46-91d2-796d759e926f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:loadbalancer/app/web-app-alb/b0076aa4460c1b5a",
            "arn_suffix": "app/web-app-alb/b0076aa4460c1b5a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-alb-125240676.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:241511115589:loadbalancer/app/web-app-alb/b0076aa4460c1b5a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0c40984c6d5725757"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030e18aa01a0a3a4d"
              },
              {
                "subnet_id": "subnet-08184f646d05a5d2e"
              }
            ],
            "subnets": [
              "subnet-030e18aa01a0a3a4d",
              "subnet-08184f646d05a5d2e"
            ],
            "tags": {
              "Name": "web-app-alb"
            },
            "tags_all": {
              "Name": "web-app-alb"
            },
            "vpc_id": "vpc-08444e30137a816a1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:loadbalancer/app/web-app-alb/b0076aa4460c1b5a"
          },
          "dependencies": [
            "module.alb.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:listener/app/web-app-alb/b0076aa4460c1b5a/ba3f93492e97e8c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:241511115589:listener/app/web-app-alb/b0076aa4460c1b5a/ba3f93492e97e8c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:loadbalancer/app/web-app-alb/b0076aa4460c1b5a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:listener/app/web-app-alb/b0076aa4460c1b5a/ba3f93492e97e8c3"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9",
            "arn_suffix": "targetgroup/web-app-tg/9b46422ce921dfe9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9-20250808185855852100000007",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9",
            "target_id": "i-046dbe0b67679b1f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2.aws_instance.web",
            "module.ec2.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9-20250808185855635800000006",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:241511115589:targetgroup/web-app-tg/9b46422ce921dfe9",
            "target_id": "i-0673dd274a91a1a3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.main",
            "module.ec2.aws_instance.web",
            "module.ec2.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:security-group/sg-0c40984c6d5725757",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c40984c6d5725757",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250808185830376100000001",
            "name_prefix": "terraform-",
            "owner_id": "241511115589",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "241511115589",
            "id": "sg-0c40984c6d5725757",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08221e706f343d7b7",
            "arn": "arn:aws:ec2:us-east-2:241511115589:instance/i-046dbe0b67679b1f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046dbe0b67679b1f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02fda8e24fc7017df",
            "private_dns": "ip-10-0-1-195.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_ip": "18.191.132.13",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0396af722080acdc7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030e18aa01a0a3a4d",
            "tags": {
              "Name": "web-server-0"
            },
            "tags_all": {
              "Name": "web-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a26f89af3a7634ca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08221e706f343d7b7",
            "arn": "arn:aws:ec2:us-east-2:241511115589:instance/i-0673dd274a91a1a3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0673dd274a91a1a3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3669c4ea6388243",
            "private_dns": "ip-10-0-2-246.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.246",
            "public_ip": "3.143.217.136",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09bc43c07a800ff4b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08184f646d05a5d2e",
            "tags": {
              "Name": "web-server-1"
            },
            "tags_all": {
              "Name": "web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a26f89af3a7634ca"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:security-group/sg-0a26f89af3a7634ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a26f89af3a7634ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250808185830385900000002",
            "name_prefix": "terraform-",
            "owner_id": "241511115589",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "241511115589",
            "id": "sg-0a26f89af3a7634ca",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:internet-gateway/igw-008f15bedf9485c6f",
            "id": "igw-008f15bedf9485c6f",
            "owner_id": "241511115589",
            "region": "us-east-2",
            "tags": {
              "Name": "web-app-igw"
            },
            "tags_all": {
              "Name": "web-app-igw"
            },
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:route-table/rtb-0b650dbbfb0c851bf",
            "id": "rtb-0b650dbbfb0c851bf",
            "owner_id": "241511115589",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008f15bedf9485c6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f22aaa009dbeec50",
            "region": "us-east-2",
            "route_table_id": "rtb-0b650dbbfb0c851bf",
            "subnet_id": "subnet-030e18aa01a0a3a4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b5ec75715941b33",
            "region": "us-east-2",
            "route_table_id": "rtb-0b650dbbfb0c851bf",
            "subnet_id": "subnet-08184f646d05a5d2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:subnet/subnet-030e18aa01a0a3a4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030e18aa01a0a3a4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "241511115589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:subnet/subnet-08184f646d05a5d2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08184f646d05a5d2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "241511115589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-08444e30137a816a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:241511115589:vpc/vpc-08444e30137a816a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd7a0aa76e240241",
            "default_route_table_id": "rtb-0b968765acf36a389",
            "default_security_group_id": "sg-0e26bf0b06546d4f6",
            "dhcp_options_id": "dopt-0439ebc3ea06890c1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08444e30137a816a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b968765acf36a389",
            "owner_id": "241511115589",
            "region": "us-east-2",
            "tags": {
              "Name": "web-app-vpc"
            },
            "tags_all": {
              "Name": "web-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}